--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <p>
                   Hai fame? DeliveBoo fa al caso tuo! Sito di delivery completo
                   ispirato a Deliveroo creato con framework Vue.js e Laravel e
-                  utilizzando Braintree per la gesttione pagamenti.
+                  utilizzando Braintree per la gestione pagamenti.
                 </p>
               </div>
               <div class="icons">
