--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- Icona del sito web (favicon) -->
-    <link rel="icon" type="image/png" href="./img/Icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png" />
   </head>
 
   <body class="main-content">
